--- a/H_BimNote/test.ipynb
+++ b/H_BimNote/test.ipynb
@@ -12,6 +12,96 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_target_byRef(refData, targetData):\n",
+    "    \"\"\"\n",
+    "    Updates the values of B data based on matching names in A data.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    - a_data: Dictionary containing the 'A' data.\n",
+    "    - b_data: Dictionary containing the 'B' data.\n",
+    "    \"\"\"\n",
+    "    # Flatten A data into a dictionary with 'name' as key and 'values' as value\n",
+    "    a_values_map = {}\n",
+    "\n",
+    "    def flatten_a_data(data):\n",
+    "        if isinstance(data, list):\n",
+    "            for item in data:\n",
+    "                flatten_a_data(item)\n",
+    "        elif isinstance(data, dict):\n",
+    "            a_values_map[data[\"name\"]] = data[\"values\"]\n",
+    "            flatten_a_data(data.get(\"children\", []))\n",
+    "\n",
+    "    # Flatten A data for easy lookup\n",
+    "    flatten_a_data(refData[\"common-input\"][\"children\"])\n",
+    "\n",
+    "    # Update B data\n",
+    "    for child in targetData[\"children\"]:\n",
+    "        if child[\"name\"] in a_values_map:\n",
+    "            # Get the fourth value of the matched A data\n",
+    "            a_value_to_update = a_values_map[child[\"name\"]][3] if len(a_values_map[child[\"name\"]]) > 3 else None\n",
+    "            if a_value_to_update:\n",
+    "                # Update the second value of B data\n",
+    "                child[\"values\"][2] = a_value_to_update\n",
+    "\n",
+    "    return targetData\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'Q5.2',\n",
+       " 'values': ['Q5.2'],\n",
+       " 'children': [{'name': 'C1', 'values': ['', 'C1', '0.05'], 'children': []},\n",
+       "  {'name': 'D1', 'values': ['', 'D1', '0.1'], 'children': []}]}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Example A and B data\n",
+    "refData = {\n",
+    "    \"common-input\": {\n",
+    "        \"children\": [\n",
+    "            {\n",
+    "                \"name\": \"Earth Work\",\n",
+    "                \"values\": [\"Earth Work\"],\n",
+    "                \"children\": [\n",
+    "                    {\"name\": \"C1\", \"values\": [\"\", \"C1\", \"Lean 두께 (m)\", \"0.05\", \"m\"], \"children\": []},\n",
+    "                    {\"name\": \"D1\", \"values\": [\"\", \"D1\", \"Lean 돌출길이 (m)\", \"0.1\", \"m\"], \"children\": []},\n",
+    "                ],\n",
+    "            }\n",
+    "        ]\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "targetData = {\n",
+    "    \"name\": \"Q5.2\",\n",
+    "    \"values\": [\"Q5.2\"],\n",
+    "    \"children\": [\n",
+    "        {\"name\": \"C1\", \"values\": [\"\", \"C1\", \"Area\"], \"children\": []},\n",
+    "        {\"name\": \"D1\", \"values\": [\"\", \"D1\", \"Lean 돌출길이\"], \"children\": []},\n",
+    "    ],\n",
+    "}\n",
+    "\n",
+    "# Update B data\n",
+    "updated_b_data = update_target_byRef(refData, targetData)\n",
+    "updated_b_data"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [],
@@ -77882,7 +77972,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
