--- a/H_BimNote/test.ipynb
+++ b/H_BimNote/test.ipynb
@@ -14,6 +14,157 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 5, 6]\n",
+      "[1, 2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from copy import deepcopy\n",
+    "\n",
+    "a= [1,2,3,4,5,6]\n",
+    "b= deepcopy(a)\n",
+    "# b= a[:]\n",
+    "del b[3]\n",
+    "print(b)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TreeDataManager:\n",
+    "    def __init__(self, state, related_widget=None):\n",
+    "        self.state = state\n",
+    "        self.team_std_info = state[\"team_std_info\"]\n",
+    "        self.data_kind = related_widget.data_kind if related_widget else \"project\"\n",
+    "\n",
+    "    def find_parent_node_recursive(self, data, target_name):\n",
+    "        \"\"\"Find the parent node and the target node by name.\"\"\"\n",
+    "        if not isinstance(data, list):\n",
+    "            return None, None\n",
+    "        for node in data:\n",
+    "            if \"children\" in node:\n",
+    "                # Check if the target node is directly in the children\n",
+    "                for child in node[\"children\"]:\n",
+    "                    if child.get(\"name\") == target_name:\n",
+    "                        return node, child\n",
+    "                # Recur to search in deeper levels\n",
+    "                parent_node, child_node = self.find_parent_node_recursive(node[\"children\"], target_name)\n",
+    "                if parent_node:\n",
+    "                    return parent_node, child_node\n",
+    "        return None, None\n",
+    "\n",
+    "\n",
+    "    def copy_node(self, data_kind, selected_name, new_name):\n",
+    "        \"\"\"Copy the selected node and its children, placing the copy directly below the original.\"\"\"\n",
+    "        try:\n",
+    "            # Find the parent node and the selected node to copy\n",
+    "            parent_node, selected_node = self.find_parent_node_recursive(\n",
+    "                self.team_std_info[data_kind][\"children\"], selected_name\n",
+    "            )\n",
+    "\n",
+    "            if not selected_node:\n",
+    "                print(f\"Could not find the node '{selected_name}' to copy.\")\n",
+    "                return\n",
+    "\n",
+    "            # Create a deep copy of the selected node\n",
+    "            def deep_copy_node(node, new_name):\n",
+    "                copied_node = {\n",
+    "                    \"name\": new_name,\n",
+    "                    \"values\": node[\"values\"][:],  # Copy values\n",
+    "                    \"children\": [deep_copy_node(child, child[\"name\"]) for child in node.get(\"children\", [])],\n",
+    "                }\n",
+    "                return copied_node\n",
+    "\n",
+    "            # Generate a deep copy with a new name\n",
+    "            copied_node = deep_copy_node(selected_node, new_name)\n",
+    "\n",
+    "            # Insert the copied node directly after the selected node in the parent's children\n",
+    "            if parent_node:\n",
+    "                index = parent_node[\"children\"].index(selected_node)\n",
+    "                parent_node[\"children\"].insert(index + 1, copied_node)\n",
+    "                print(f\"Copied node '{selected_name}' to '{new_name}'.\")\n",
+    "            else:\n",
+    "                print(f\"Parent node not found for '{selected_name}'.\")\n",
+    "\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error copying node: {e}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Could not find the node 'Node A' to copy.\n",
+      "[{'children': [{'children': [], 'name': 'Node A1', 'values': ['Node A1']},\n",
+      "               {'children': [], 'name': 'Node A2', 'values': ['Node A2']}],\n",
+      "  'name': 'Node A',\n",
+      "  'values': ['Node A']},\n",
+      " {'children': [], 'name': 'Node B', 'values': ['Node B']}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example usage of the TreeDataManager class with the copy_node method\n",
+    "state = {\n",
+    "    \"team_std_info\": {\n",
+    "        \"project\": {\n",
+    "            \"children\": [\n",
+    "                {\n",
+    "                    \"name\": \"Node A\",\n",
+    "                    \"values\": [\"Node A\"],\n",
+    "                    \"children\": [\n",
+    "                        {\n",
+    "                            \"name\": \"Node A1\",\n",
+    "                            \"values\": [\"Node A1\"],\n",
+    "                            \"children\": [],\n",
+    "                        },\n",
+    "                        {\n",
+    "                            \"name\": \"Node A2\",\n",
+    "                            \"values\": [\"Node A2\"],\n",
+    "                            \"children\": [],\n",
+    "                        },\n",
+    "                    ],\n",
+    "                },\n",
+    "                {\n",
+    "                    \"name\": \"Node B\",\n",
+    "                    \"values\": [\"Node B\"],\n",
+    "                    \"children\": [],\n",
+    "                },\n",
+    "            ],\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "tree_manager = TreeDataManager(state)\n",
+    "\n",
+    "# Copy \"Node A\" to a new node named \"Node A Copy\"\n",
+    "tree_manager.copy_node(\"project\", \"Node A\", \"Node A Copy\")\n",
+    "\n",
+    "# Print the updated state\n",
+    "import pprint\n",
+    "pprint.pprint(state[\"team_std_info\"][\"project\"][\"children\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def update_target_byRef(refData, targetData):\n",
