--- a/H_BimNote/test.ipynb
+++ b/H_BimNote/test.ipynb
@@ -12,27 +12,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [\n",
+    "    {\n",
+    "    \"name\": \"Earth Work\",\n",
+    "    \"values\": [\"Earth Work\", \"\", \"\", \"\"],\n",
+    "    \"children\": [\n",
+    "        {\n",
+    "            \"name\": \"EARTH\",\n",
+    "            \"values\": [\"\", \"EARTH\", \"\", \"\"],\n",
+    "            \"children\": [\n",
+    "                {\"name\": \"Excavation_A\", \"values\": [\"\", \"\", \"Excavation_A\", \"\"], \"children\": []},\n",
+    "                {\"name\": \"Excavation_B\", \"values\": [\"\", \"\", \"Excavation_B\", \"\"], \"children\": []},\n",
+    "                {\"name\": \"Backfilling_A\", \"values\": [\"\", \"\", \"Backfilling_A\", \"\"], \"children\": []},\n",
+    "                {\"name\": \"Backfilling_B\", \"values\": [\"\", \"\", \"Backfilling_B\", \"\"], \"children\": []},\n",
+    "                {\"name\": \"Disposal\", \"values\": [\"\", \"\", \"Disposal\", \"\"], \"children\": []},\n",
+    "            ],\n",
+    "        },\n",
+    "        {\n",
+    "            \"name\": \"BASE\",\n",
+    "            \"values\": [\"\", \"BASE\", \"\", \"\"],\n",
+    "            \"children\": [\n",
+    "                {\"name\": \"Base\", \"values\": [\"\", \"\", \"Base\", \"\"], \"children\": []},\n",
+    "                {\"name\": \"Sub Base\", \"values\": [\"\", \"\", \"Sub Base\", \"\"], \"children\": []},\n",
+    "            ],\n",
+    "        },\n",
+    "        {\n",
+    "            \"name\": \"BASE_1\",\n",
+    "            \"values\": [\"\", \"BASE\", \"\", \"\"],\n",
+    "            \"children\": [\n",
+    "                {\"name\": \"Base\", \"values\": [\"\", \"\", \"Base\", \"\"], \"children\": []},\n",
+    "                {\"name\": \"Sub Base\", \"values\": [\"\", \"\", \"Sub Base\", \"\"], \"children\": []},\n",
+    "            ],\n",
+    "        },\n",
+    "        {\n",
+    "            \"name\": \"PILE\",\n",
+    "            \"values\": [\"\", \"PILE\", \"\", \"\"],\n",
+    "            \"children\": [\n",
+    "                {\"name\": \"Piling\", \"values\": [\"\", \"\", \"Piling\", \"\"], \"children\": []},\n",
+    "                {\"name\": \"Head\", \"values\": [\"\", \"\", \"Head\", \"\"], \"children\": []},\n",
+    "            ],\n",
+    "        },\n",
+    "    ],\n",
+    "},\n",
+    "    {\n",
+    "    \"name\": \"Earth Work\",\n",
+    "    \"values\": [\"Earth Work\", \"\", \"\", \"\"],\n",
+    "    \"children\": [\n",
+    "        {\n",
+    "            \"name\": \"EARTH\",\n",
+    "            \"values\": [\"\", \"EARTH\", \"\", \"\"],\n",
+    "            \"children\": [\n",
+    "                {\"name\": \"Excavation_A\", \"values\": [\"\", \"\", \"Excavation_A\", \"\"], \"children\": []},\n",
+    "                {\"name\": \"Excavation_B\", \"values\": [\"\", \"\", \"Excavation_B\", \"\"], \"children\": []},\n",
+    "                {\"name\": \"Backfilling_A\", \"values\": [\"\", \"\", \"Backfilling_A\", \"\"], \"children\": []},\n",
+    "                {\"name\": \"Backfilling_B\", \"values\": [\"\", \"\", \"Backfilling_B\", \"\"], \"children\": []},\n",
+    "                {\"name\": \"Disposal\", \"values\": [\"\", \"\", \"Disposal\", \"\"], \"children\": []},\n",
+    "            ],\n",
+    "        },\n",
+    "        {\n",
+    "            \"name\": \"BASE\",\n",
+    "            \"values\": [\"\", \"BASE\", \"\", \"\"],\n",
+    "            \"children\": [\n",
+    "                {\"name\": \"Base\", \"values\": [\"\", \"\", \"Base\", \"\"], \"children\": []},\n",
+    "                {\"name\": \"Sub Base\", \"values\": [\"\", \"\", \"Sub Base\", \"\"], \"children\": []},\n",
+    "            ],\n",
+    "        },\n",
+    "        {\n",
+    "            \"name\": \"BASE_1\",\n",
+    "            \"values\": [\"\", \"BASE\", \"\", \"\"],\n",
+    "            \"children\": [\n",
+    "                {\"name\": \"Base\", \"values\": [\"\", \"\", \"Base\", \"\"], \"children\": []},\n",
+    "                {\"name\": \"Sub Base\", \"values\": [\"\", \"\", \"Sub Base\", \"\"], \"children\": []},\n",
+    "            ],\n",
+    "        },\n",
+    "        {\n",
+    "            \"name\": \"PILE\",\n",
+    "            \"values\": [\"\", \"PILE\", \"\", \"\"],\n",
+    "            \"children\": [\n",
+    "                {\"name\": \"Piling\", \"values\": [\"\", \"\", \"Piling\", \"\"], \"children\": []},\n",
+    "                {\"name\": \"Head\", \"values\": [\"\", \"\", \"Head\", \"\"], \"children\": []},\n",
+    "            ],\n",
+    "        },\n",
+    "    ],\n",
+    "}\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_items_with_underscore_at_depth_2(data_list):\n",
+    "    \"\"\"\n",
+    "    Removes items with an underscore in their 'name' at depth 2, along with their children.\n",
+    "\n",
+    "    Parameters:\n",
+    "        data_list (list): A list of hierarchical data structures.\n",
+    "\n",
+    "    Returns:\n",
+    "        list: Cleaned data with specified items removed.\n",
+    "    \"\"\"\n",
+    "    def clean_children(children, depth):\n",
+    "        cleaned_children = []\n",
+    "        for child in children:\n",
+    "            # At depth 2, check for underscores in the 'name' field\n",
+    "            if depth == 2 and \"_\" in child.get(\"name\", \"\"):\n",
+    "                continue  # Skip this item and its children\n",
+    "            # Recursively clean if 'children' field exists\n",
+    "            if \"children\" in child:\n",
+    "                child[\"children\"] = clean_children(child[\"children\"], depth + 1)\n",
+    "            cleaned_children.append(child)\n",
+    "        return cleaned_children\n",
+    "\n",
+    "    # Process each top-level item in the list\n",
+    "    for item in data_list:\n",
+    "        if \"children\" in item:\n",
+    "            item[\"children\"] = clean_children(item[\"children\"], 2)\n",
+    "    \n",
+    "    return data_list\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3, 5, 6]\n",
-      "[1, 2, 3, 4, 5, 6]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[{'name': 'Earth Work',\n",
+       "  'values': ['Earth Work', '', '', ''],\n",
+       "  'children': [{'name': 'EARTH',\n",
+       "    'values': ['', 'EARTH', '', ''],\n",
+       "    'children': [{'name': 'Excavation_A',\n",
+       "      'values': ['', '', 'Excavation_A', ''],\n",
+       "      'children': []},\n",
+       "     {'name': 'Excavation_B',\n",
+       "      'values': ['', '', 'Excavation_B', ''],\n",
+       "      'children': []},\n",
+       "     {'name': 'Backfilling_A',\n",
+       "      'values': ['', '', 'Backfilling_A', ''],\n",
+       "      'children': []},\n",
+       "     {'name': 'Backfilling_B',\n",
+       "      'values': ['', '', 'Backfilling_B', ''],\n",
+       "      'children': []},\n",
+       "     {'name': 'Disposal',\n",
+       "      'values': ['', '', 'Disposal', ''],\n",
+       "      'children': []}]},\n",
+       "   {'name': 'BASE',\n",
+       "    'values': ['', 'BASE', '', ''],\n",
+       "    'children': [{'name': 'Base',\n",
+       "      'values': ['', '', 'Base', ''],\n",
+       "      'children': []},\n",
+       "     {'name': 'Sub Base',\n",
+       "      'values': ['', '', 'Sub Base', ''],\n",
+       "      'children': []}]},\n",
+       "   {'name': 'PILE',\n",
+       "    'values': ['', 'PILE', '', ''],\n",
+       "    'children': [{'name': 'Piling',\n",
+       "      'values': ['', '', 'Piling', ''],\n",
+       "      'children': []},\n",
+       "     {'name': 'Head', 'values': ['', '', 'Head', ''], 'children': []}]}]},\n",
+       " {'name': 'Earth Work',\n",
+       "  'values': ['Earth Work', '', '', ''],\n",
+       "  'children': [{'name': 'EARTH',\n",
+       "    'values': ['', 'EARTH', '', ''],\n",
+       "    'children': [{'name': 'Excavation_A',\n",
+       "      'values': ['', '', 'Excavation_A', ''],\n",
+       "      'children': []},\n",
+       "     {'name': 'Excavation_B',\n",
+       "      'values': ['', '', 'Excavation_B', ''],\n",
+       "      'children': []},\n",
+       "     {'name': 'Backfilling_A',\n",
+       "      'values': ['', '', 'Backfilling_A', ''],\n",
+       "      'children': []},\n",
+       "     {'name': 'Backfilling_B',\n",
+       "      'values': ['', '', 'Backfilling_B', ''],\n",
+       "      'children': []},\n",
+       "     {'name': 'Disposal',\n",
+       "      'values': ['', '', 'Disposal', ''],\n",
+       "      'children': []}]},\n",
+       "   {'name': 'BASE',\n",
+       "    'values': ['', 'BASE', '', ''],\n",
+       "    'children': [{'name': 'Base',\n",
+       "      'values': ['', '', 'Base', ''],\n",
+       "      'children': []},\n",
+       "     {'name': 'Sub Base',\n",
+       "      'values': ['', '', 'Sub Base', ''],\n",
+       "      'children': []}]},\n",
+       "   {'name': 'PILE',\n",
+       "    'values': ['', 'PILE', '', ''],\n",
+       "    'children': [{'name': 'Piling',\n",
+       "      'values': ['', '', 'Piling', ''],\n",
+       "      'children': []},\n",
+       "     {'name': 'Head', 'values': ['', '', 'Head', ''], 'children': []}]}]}]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from copy import deepcopy\n",
-    "\n",
-    "a= [1,2,3,4,5,6]\n",
-    "b= deepcopy(a)\n",
-    "# b= a[:]\n",
-    "del b[3]\n",
-    "print(b)\n",
-    "print(a)"
+    "cleaned_data = remove_items_with_underscore_at_depth_2(data)\n",
+    "cleaned_data"
    ]
   },
   {
