--- a/H_BimNote/test.ipynb
+++ b/H_BimNote/test.ipynb
@@ -12,6 +12,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def wrap_text(text, width):\n",
+    "    \"\"\"\n",
+    "    Wrap text to fit within a given width, handling long words properly.\n",
+    "    \"\"\"\n",
+    "    if not text or not isinstance(text, str):\n",
+    "        return text\n",
+    "    max_chars_per_line = max(1, width // 7)  # Approximate character width in pixels\n",
+    "\n",
+    "    words = text.split()  # Split into words\n",
+    "    lines = []\n",
+    "    current_line = \"\"\n",
+    "\n",
+    "    for word in words:\n",
+    "        while len(word) > max_chars_per_line:  # Split long words into chunks\n",
+    "            lines.append(word[:max_chars_per_line])\n",
+    "            word = word[max_chars_per_line:]\n",
+    "\n",
+    "        if len(current_line) + len(word) + 1 > max_chars_per_line:\n",
+    "            lines.append(current_line)\n",
+    "            current_line = word\n",
+    "        else:\n",
+    "            current_line = f\"{current_line} {word}\".strip()\n",
+    "\n",
+    "    if current_line:\n",
+    "        lines.append(current_line)\n",
+    "\n",
+    "    return \"\\n\".join(lines)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'asdf\\ndddd\\ndddd\\ndddd\\ndddd\\ndddd\\ndddd\\ndddd\\ndddd\\ndddd\\ndddd\\ndddd\\ndddd\\ndddd\\ndddd\\ndddd\\ndddd\\n\\ndddd'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wrap_text(\"asdfdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd\", 30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
