--- a/H_BimNote/test.ipynb
+++ b/H_BimNote/test.ipynb
@@ -2,12 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "from src.core.file_utils import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 1, 'b': 2, 'c': 3, 'd': 4, 'e': 5}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [\"a\",\"b\",\"c\",\"d\", \"e\"]\n",
+    "b = [1,2,3,4,5,6,7]\n",
+    "dict(list(zip(a,b)))\n"
    ]
   },
   {
@@ -78374,7 +78396,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
