--- a/H_BimNote/test.ipynb
+++ b/H_BimNote/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,17 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"D:/mk/mQ/H_BimNote/test_newtemplate.bnote\", \"r\", encoding=\"utf-8\") as file:\n",
+    "with open(\"D:/mk/mQ/H_BimNote/template 검토/PlantArch_BIM Standard.bnote\", \"r\", encoding=\"utf-8\") as file:\n",
     "    loaded_data = json.load(file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -2339,8 +2339,8 @@
        "      'values': ['', '', 'Manhole Cover', ''],\n",
        "      'children': ['A04AV211-00001 | AR | A04 | Finishing Work | AV | Misc. Work | 211 | Manhole Cover | DT | Round Cast Iron Cover w/Frame | 49 | Heavy Duty Type | 60 | DIA=600mm | EA | EA | A04AV211 | A04AV211-00001',\n",
        "       'A04AV211-00002 | AR | A04 | Finishing Work | AV | Misc. Work | 211 | Manhole Cover | DT | Round Cast Iron Cover w/Frame | 49 | Heavy Duty Type | AT | DIA=800mm | EA | EA | A04AV211 | A04AV211-00002']}]},\n",
-       "   {'name': 'Fence',\n",
-       "    'values': ['', 'Fence', '', ''],\n",
+       "   {'name': 'Frnce',\n",
+       "    'values': ['', 'Frnce', '', ''],\n",
        "    'children': [{'name': 'Fence',\n",
        "      'values': ['', '', 'Fence', ''],\n",
        "      'children': ['A04AV212-00001 | AR | A04 | Finishing Work | AV | Misc. Work | 212 | Chain Link Fence (Fixed Type) | DU | Self-Standing Type w/ Steel Frame | 34 | w/ Fixing Accessories | 69 | 1500mm≤H<2000mm | H=(  )mm | M | M | A04AV212 | A04AV212-00001',\n",
@@ -2574,7 +2574,7 @@
        "       'F01AR000-00001 | FP | F01 | Building/Shelter Fire Proofing Work | AR | Intermediate and top Coat for Intumescent Fire Proofing | 000 | - | Material: (   ) | DFT=(  )㎛ | M2 | M2 | F01AR000 | F01AR000-00001']}]}]}]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2589,7 +2589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -2786,8 +2786,8 @@
        " 'A04 MISC | Catch Basin | Splash Block',\n",
        " 'A04 MISC | Ventilator | Natural Ventilator',\n",
        " 'A04 MISC | Manhole Cover | Manhole Cover',\n",
-       " 'A04 MISC | Fence | Fence',\n",
-       " 'A04 MISC | Fence | Fence Gate',\n",
+       " 'A04 MISC | Frnce | Fence',\n",
+       " 'A04 MISC | Frnce | Fence Gate',\n",
        " 'A04 MISC | Canopy | Canopy',\n",
        " 'A04 MISC | Signage | Signage',\n",
        " 'A04 MISC | Toilet Accessories | Toilet Acce',\n",
@@ -2803,7 +2803,7 @@
        " 'F01 Fire Proofing | Top Coat | Top Coat for FP']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2823,7 +2823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2832,7 +2832,7 @@
        "[]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
