--- a/H_BimNote/test.ipynb
+++ b/H_BimNote/test.ipynb
@@ -2,12 +2,151 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
-    "from src.core.file_utils import *"
+    "from src.core.file_utils import *\n",
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_list = [\n",
+    "    \"0.Room\",\n",
+    "    \"1.Room\",\n",
+    "    \"7.Room\",\n",
+    "    \"2.Room\",\n",
+    "    \"11.Room\",\n",
+    "    \"3.Room\",\n",
+    "    \"4.Room\",\n",
+    "    \"5.Room\",\n",
+    "    \"6.Room\",\n",
+    "    \"8.Room\",\n",
+    "    \"12.Room\",\n",
+    "    \"9.Room\",\n",
+    "    \"10.Room\",\n",
+    "    \"apple\",\n",
+    "    \"3.20\",\n",
+    "    \"chunk\",\n",
+    "    \"fall\",\n",
+    "    \"1.1\",\n",
+    "    \"3.2\",\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['0.Room',\n",
+       " '1.1',\n",
+       " '1.Room',\n",
+       " '10.Room',\n",
+       " '11.Room',\n",
+       " '12.Room',\n",
+       " '2.Room',\n",
+       " '3.2',\n",
+       " '3.20',\n",
+       " '3.Room',\n",
+       " '4.Room',\n",
+       " '5.Room',\n",
+       " '6.Room',\n",
+       " '7.Room',\n",
+       " '8.Room',\n",
+       " '9.Room',\n",
+       " 'apple',\n",
+       " 'chunk',\n",
+       " 'fall']"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def sort_func(str):\n",
+    "    try:\n",
+    "        try:\n",
+    "            res = go(\n",
+    "                # re.split(r\"(\\d+)\", str),\n",
+    "                re.split(r\"^\\d+\", input[\"name\"]),\n",
+    "                filter(lambda x: x.isdigit()),\n",
+    "                next,\n",
+    "                # int,\n",
+    "                int,\n",
+    "                chr,\n",
+    "            )\n",
+    "            return res\n",
+    "        except:\n",
+    "            return str[\"name\"]\n",
+    "    except:\n",
+    "        return str\n",
+    "\n",
+    "sorted(test_list, key=sort_func)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['', '.man']"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res = go(\n",
+    "    re.split(r\"^\\d+\", \"14.man\"),\n",
+    "    # filter(lambda x: x.isdigit()),\n",
+    "    # next,\n",
+    "    # int,\n",
+    "    # chr\n",
+    ")\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res = go(\n",
+    "    re.split(r\"(\\d+)\", \"2.Roofs\"),\n",
+    "    filter(lambda x: x.isdigit()),\n",
+    "    next,\n",
+    "    int,\n",
+    ")\n",
+    "res"
    ]
   },
   {
